--- a/z_java-klas-web/Angular/date-picker/src/app/app.component.html
+++ b/z_java-klas-web/Angular/date-picker/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-navbar/>
-<div class="container p-3 bg-light text-bg-light shadow">
-  <router-outlet/>
+<div class="container p-3">
+  <div class="bg-light text-bg-light">
+    <router-outlet/>
+
+  </div>
 </div>
